# Woo-to-SP

./: .gitignore  __init__.py  cli.py  pyproject.toml  readme.md  requirements.txt  woo-to-sp.py
base/: __init__.py  base_migration.py
categories/: __init__.py  categories.py  readme.md
configs/: country_codes.py  zerno_config.py
customers/: __init__.py  customers.py  readme.md  users.py
orders/: __init__.py  meta_mapping.csv  orders.py  readme.md
products/: __init__.py  products.py  readme.md
promocodes/: __init__.py  promocode.py  readme.md
reviews/: __init__.py  readme.md  review.py  woo_reviews_export.csv
tests/: __init__.py  conftest.py  test_base.py  test_collections.py  test_discounts.py  test_products.py  test_reviews.py
