[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woo-to-sp"
version = "1.2.0"
description = "WooCommerce to Shopify Migration Toolkit"
readme = "readme.md"
license = {text = "MIT"}
authors = [
    {name = "Gabriel Kanev", email = "gabriel@example.com"}
]
keywords = ["woocommerce", "shopify", "migration", "ecommerce", "data-migration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.2",
    "requests>=2.31.0",
    "tqdm>=4.66.1",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
]

[project.scripts]
woo-to-sp = "cli:main"
woo-products = "products.products:main"
woo-customers = "customers.customers:main"
woo-orders = "orders.orders:main"
woo-collections = "categories.categories:main"
woo-reviews = "reviews.review:main"
woo-discounts = "promocodes.promocode:main"

[project.urls]
Homepage = "https://github.com/MrGKanev/Woo-to-SP"
Repository = "https://github.com/MrGKanev/Woo-to-SP"
Issues = "https://github.com/MrGKanev/Woo-to-SP/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["base", "products", "customers", "orders", "categories", "reviews", "promocodes"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["base", "products", "customers", "orders", "categories", "reviews", "promocodes"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
